# phonepe-pg-docs-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release-to-pypl.yml
scripts/: build_index.py
src/phonepe_docs_mcp/: __init__.py  config.py  server.py
src/phonepe_docs_mcp/knowledge/: __init__.py  docs_registry.yml  knowledge_base.yml
src/phonepe_docs_mcp/services/: __init__.py  _paths.py  doc_service.py  kb_service.py
src/phonepe_docs_mcp/tools/: __init__.py  doc_tools.py
tests/: conftest.py  test_doc_service_fts_search.py  test_doc_service_get_content.py  test_kb_error_codes.py  test_kb_faq_scoring.py  test_kb_feature_matrix.py  test_snippet.py
